[gd_scene load_steps=7 format=3 uid="uid://cbbukwx72poyn"]

[ext_resource type="Script" path="res://assets/Scripts/Screens/MainMenuScreen.gd" id="1_7r1pe"]
[ext_resource type="Texture2D" uid="uid://cm5vw28hwttuq" path="res://appIcons/menubackground.png" id="2_elof5"]
[ext_resource type="Texture2D" uid="uid://jnncprsjh8fp" path="res://appIcons/menubuttons.png" id="3_8t60r"]
[ext_resource type="AudioStream" uid="uid://cmtgoyedsbdtk" path="res://assets/SFX/Menu_Click.wav" id="4_utgkp"]
[ext_resource type="AudioStream" uid="uid://bpv1w1rf0coc0" path="res://assets/SFX/Menu_Hover.wav" id="5_14gfw"]
[ext_resource type="FontFile" uid="uid://qcokiesg0mbc" path="res://fonts/Chembun/TitanOne-Regular.ttf" id="6_a2dix"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7r1pe")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -578.0
offset_top = -325.0
offset_right = 578.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_elof5")

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_right = 1157.0
offset_bottom = 651.0
texture = ExtResource("3_8t60r")

[node name="StartButton" type="Button" parent="TextureRect/TextureRect"]
show_behind_parent = true
layout_mode = 0
offset_left = 73.0
offset_top = 107.0
offset_right = 288.0
offset_bottom = 184.0

[node name="SettingsButton" type="Button" parent="TextureRect/TextureRect"]
show_behind_parent = true
layout_mode = 0
offset_left = 75.0
offset_top = 190.0
offset_right = 336.0
offset_bottom = 267.0

[node name="CreditsButton" type="Button" parent="TextureRect/TextureRect"]
show_behind_parent = true
layout_mode = 0
offset_left = 73.0
offset_top = 273.0
offset_right = 297.0
offset_bottom = 350.0

[node name="QuitButton" type="Button" parent="TextureRect/TextureRect"]
show_behind_parent = true
layout_mode = 0
offset_left = 73.0
offset_top = 355.0
offset_right = 297.0
offset_bottom = 432.0

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_utgkp")
pitch_scale = 0.6

[node name="MenuHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_14gfw")
pitch_scale = 0.75

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 616.0
offset_top = 483.0
offset_right = 1176.0
offset_bottom = 634.0
theme_override_colors/font_color = Color(0.294118, 0.294118, 0.294118, 1)
theme_override_fonts/font = ExtResource("6_a2dix")
text = "+/- for zoom
wasd to move
\"shift\" to sprint
\"escape\" to pause
\"alt\" for element wheel
\"shift\" + \"=\" to skip intro cutscene
\"settings\" button on main menu to reset save data"

[connection signal="mouse_entered" from="TextureRect/TextureRect/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="TextureRect/TextureRect/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="TextureRect/TextureRect/SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="pressed" from="TextureRect/TextureRect/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="TextureRect/TextureRect/CreditsButton" to="." method="_on_credits_button_mouse_entered"]
[connection signal="pressed" from="TextureRect/TextureRect/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="TextureRect/TextureRect/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="TextureRect/TextureRect/QuitButton" to="." method="_on_quit_button_pressed"]
